--- a/worksheet.css
+++ b/worksheet.css
@@ -6,42 +6,57 @@
 
 /* Number Two */
 .container-2 {
-
+    display: flex;
+    align-items: flex-end;
 }
 
 /* Number Three */
 .container-3 {
-
+    display: flex;
+    align-items: center;
 }
 
 /* Number Four */
 .container-4 {
-
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    
 }
 
 /* Number Five */
 .container-5 {
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Number Six */
 .container-6 {
-
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 /* Number Seven */
 .container-7 {
-
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 /* Number Eight */
 .container-8 {
-
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 /* Number Nine */
 .container-9 {
-
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 /* Number Ten */
