--- a/worksheet.css
+++ b/worksheet.css
@@ -62,11 +62,17 @@
 /* Number Ten */
 .container-10 {
     display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 /* Number Eleven */
 .container-11 {
     display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 /* Number Twelve */
